--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "@types/node": "12.7.8",
     "@types/react": "16.9.4",
     "@types/react-dom": "16.9.1",
+    "@types/react-redux": "^7.1.4",
+    "axios": "^0.19.0",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
+    "react-redux": "^7.1.1",
     "react-scripts": "3.1.2",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "typescript": "3.6.3"
   },
   "scripts": {
